--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 	<span>Ich bin ein Inline Element.</span>
 	<a href="#">Ich bin auch ein Inline Element</a>
 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut a liquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	<p>
+		<b>Lorem</b> ipsum dolor <strong>sit amet</strong>, consectetur <i>adipisicing</i> elit, sed do <em>eiusmod</em> tempor <br /> incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut a liquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu <span id="buchstabe">f</span>ugiat nulla pariatur. <span>Excepteur</span> sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
 </body>
 </html>
